@@ -1,3 +1,8 @@
+2008-03-28  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* src/plugins/youtube/youtube.py: Don't fall over if the YouTube
+	servers return HTTP errors.
+
 2008-03-25  Philip Withnall  <pwithnall@svn.gnome.org>
 
 	* src/plugins/publish/totem-publish.c:
